kube-manifests/stremio/aiolists-deploy.yaml
apiVersion: v1
kind: Secret
metadata:
  name: aiolists-env
  namespace: stremio
  labels:
    app: aiolists
type: Opaque
data:  
  TMDB_REDIRECT_URI: "aHR0cHM6Ly9haW9saXN0cy5pbm5lci1jaXJjbGUub3ZoLw=="
  TMDB_BEARER_TOKEN: "" # Aquí debes poner tu token de TMDB codificado en base64

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: aiolists
  namespace: stremio
  labels:
    app: aiolists
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aiolists
  template:
    metadata:
      labels:
        app: aiolists
    spec:
      containers:
      - name: aiolists
        image: adriangl/aiolist-addon:latest
        ports:
        - containerPort: 7000
        envFrom:
        - secretRef:
            name: aiolists-env
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: aiolists
  namespace: stremio
  labels:
    app: aiolists
spec:
  selector:
    app: aiolists
  ports:
    - protocol: TCP
      port: 7000
      targetPort: 7000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/server-snippet: "grpc_read_timeout 120s; grpc_send_timeout
      120s; client_body_timeout 120s;  \n"
  labels:
    name: stremio
  name: aiolists-ingress
  namespace: stremio
  resourceVersion: "117962396"
  uid: fe007cf8-5c2a-4a6d-884b-0c9593b46e25
spec:
  ingressClassName: public
  rules:
  - host: aiolists.inner-circle.ovh
    http:
      paths:
      - backend:
          service:
            name: aiolists
            port:
              number: 7000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - aiolists.inner-circle.ovh
    secretName: aiolists-tls

---

apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  creationTimestamp: "2025-07-17T00:26:02Z"
  labels:
    name: stremio
  name: aiolists-tls
  namespace: stremio
  ownerReferences:
  - apiVersion: networking.k8s.io/v1
    blockOwnerDeletion: true
    controller: true
    kind: Ingress
    name: aiolists-ingress
    uid: fe007cf8-5c2a-4a6d-884b-0c9593b46e25
  resourceVersion: "117962540"
  uid: fd9344c4-23dd-4a12-9e1e-a3243e71be36
spec:
  dnsNames:
  - aiolists.inner-circle.ovh
  issuerRef:
    group: cert-manager.io
    kind: ClusterIssuer
    name: letsencrypt
  secretName: aiolists-tls
  usages:
  - digital signature
  - key encipherment
