kube-manifests/stremio/aiostreams-deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stremio

---

apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: aiostreams-data-pvc
  namespace: stremio
spec:
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 1Gi

---

apiVersion: v1
data:
  ADDON_CATALOG_CACHE_TTL: MzAw
  ADDON_ID: ImFpb3N0cmVhbXMuaW5uZXItY2lyY2xlLm92aCI=
  ADDON_NAME: IkFJT1N0cmVhbXMgSW5uZXItQ2lyY2xlIg==
  ADDON_PASSWORD: "" # Asegúrate de establecer una contraseña segura.
  ADDON_PROXY: aHR0cDovL3dhcnAtY2xvdWRmbGFyZS12cG46MTA4MA==
  ADDON_PROXY_CONFIG: KjpmYWxzZSwqLnN0cmVtLmZ1bjp0cnVl
  AI_SEARCH_URL: aHR0cHM6Ly9zdHJlbWlvLml0Y29uLmF1L2Fpc2VhcmNo
  ANIME_CATALOGS_URL: aHR0cHM6Ly8xZmU4NGJjNzI4YWYtc3RyZW1pby1hbmltZS1jYXRhbG9ncy5iYWJ5LWJlYW11cC5jbHVi
  ANIME_KITSU_URL: aHR0cHM6Ly9hbmltZS1raXRzdS5zdHJlbS5mdW4v
  ARGENTINA_TV_URL: aHR0cHM6Ly84NDhiMzUxNjY1N2MtYXJnZW50aW5hdHYuYmFieS1iZWFtdXAuY2x1Yg==
  BASE_URL: aHR0cHM6Ly9haW9zdHJlYW1zLmlubmVyLWNpcmNsZS5vdmg=
  CATALOG_API_RATE_LIMIT_MAX_REQUESTS: NQ==
  CATALOG_API_RATE_LIMIT_WINDOW: NQ==
  CATALOG_CACHE_TTL: MzAw
  COMET_URL: aHR0cHM6Ly9jb21ldC5lbGZob3N0ZWQuY29tLw==
  CUSTOM_HTML: ""
  DATABASE_URI: c3FsaXRlOi8vLi9kYXRhL2RiLnNxbGl0ZQ==
  DC_UNIVERSE_URL: aHR0cHM6Ly9hZGRvbi1kYy1jcTg1Lm9ucmVuZGVyLmNvbS8=
  DEBRIDIO_TMDB_URL: aHR0cHM6Ly90bWRiLWFkZG9uLmRlYnJpZGlvLmNvbS8=
  DEBRIDIO_TV_URL: aHR0cHM6Ly90di1hZGRvbi5kZWJyaWRpby5jb20v
  DEBRIDIO_TVDB_URL: aHR0cHM6Ly90dmRiLWFkZG9uLmRlYnJpZGlvLmNvbS8=
  DEBRIDIO_URL: aHR0cHM6Ly9hZGRvbi5kZWJyaWRpby5jb20v
  DEBRIDIO_WATCHTOWER_URL: aHR0cHM6Ly93dC1hZGRvbi5kZWJyaWRpby5jb20v
  DEFAULT_ALLDEBRID_API_KEY: ""
  DEFAULT_DEBRIDLINK_API_KEY: ""
  DEFAULT_EASYDEBRID_API_KEY: ""
  DEFAULT_EASYNEWS_PASSWORD: ""
  DEFAULT_EASYNEWS_USERNAME: ""
  DEFAULT_JACKETTIO_INDEXERS: WyJiaXRzZWFyY2giLCAiZXp0diIsICJ0aGVwaXJhdGViYXkiLCAidGhlcmFyYmciLCAieXRzIl0=
  DEFAULT_JACKETTIO_STREMTHRU_URL: aHR0cHM6Ly9zdHJlbXRocnUuMTMzNzcwMDEueHl6
  DEFAULT_MAX_CACHE_SIZE: MTAwMDAw
  DEFAULT_OFFCLOUD_API_KEY: ""
  DEFAULT_OFFCLOUD_EMAIL: ""
  DEFAULT_OFFCLOUD_PASSWORD: ""
  DEFAULT_PIKPAK_EMAIL: ""
  DEFAULT_PIKPAK_PASSWORD: ""
  DEFAULT_PREMIUMIZE_API_KEY: ""
  DEFAULT_PROXY_ID: bWVkaWFmbG93
  DEFAULT_PUTIO_CLIENT_ID: ""
  DEFAULT_PUTIO_CLIENT_SECRET: ""
  DEFAULT_REALDEBRID_API_KEY: "" # Asegúrate de establecer una clave API segura.
  DEFAULT_SEEDR_ENCODED_TOKEN: ""
  DEFAULT_TIMEOUT: MTUwMDA=
  DEFAULT_TORBOX_API_KEY: ""
  DISABLE_RATE_LIMITS: ZmFsc2U=
  DISABLE_SELF_SCRAPING: dHJ1ZQ==
  DOCTOR_WHO_UNIVERSE_URL: aHR0cHM6Ly9uZXctd2hvLm9ucmVuZGVyLmNvbQ==
  EASYNEWS_PLUS_PLUS_URL: aHR0cHM6Ly9lYXN5bmV3cy1jbG91ZGZsYXJlLXdvcmtlci5qcXJ3OTJmY2h6LndvcmtlcnMuZGV2Lw==
  EASYNEWS_PLUS_URL: aHR0cHM6Ly9iODkyNjJjMTkyYjAtc3RyZW1pby1lYXN5bmV3cy1hZGRvbi5iYWJ5LWJlYW11cC5jbHViLw==
  EASYNEWS_URL: aHR0cHM6Ly9lYTYyN2RkZjBlZTctZWFzeW5ld3MuYmFieS1iZWFtdXAuY2x1Yi8=
  ENCRYPT_MEDIAFLOW_URLS: dHJ1ZQ==
  ENCRYPT_STREMTHRU_URLS: dHJ1ZQ==
  FORCE_PROXY_DISABLE_PROXIED_ADDONS: ZmFsc2U=
  FORCED_ALLDEBRID_API_KEY: ""
  FORCED_DEBRIDLINK_API_KEY: ""
  FORCED_EASYDEBRID_API_KEY: ""
  FORCED_EASYNEWS_PASSWORD: ""
  FORCED_EASYNEWS_USERNAME: ""
  FORCED_OFFCLOUD_API_KEY: ""
  FORCED_OFFCLOUD_EMAIL: ""
  FORCED_OFFCLOUD_PASSWORD: ""
  FORCED_PIKPAK_EMAIL: ""
  FORCED_PIKPAK_PASSWORD: ""
  FORCED_PREMIUMIZE_API_KEY: ""
  FORCED_PUTIO_CLIENT_ID: ""
  FORCED_PUTIO_CLIENT_SECRET: ""
  FORCED_REALDEBRID_API_KEY: ""
  FORCED_SEEDR_ENCODED_TOKEN: ""
  FORCED_TORBOX_API_KEY: ""
  FORMAT_API_RATE_LIMIT_MAX_REQUESTS: MzA=
  FORMAT_API_RATE_LIMIT_WINDOW: NQ==
  JACKETTIO_URL: aHR0cHM6Ly9qYWNrZXR0aW8uZWxmaG9zdGVkLmNvbS8=
  LOG_FORMAT: dGV4dA==
  LOG_LEVEL: aHR0cA==
  LOG_SENSITIVE_INFO: dHJ1ZQ==
  LOG_TIMEZONE: RXRjL1VUQw==
  MANIFEST_CACHE_TTL: MzAw
  MARVEL_UNIVERSE_URL: aHR0cHM6Ly9hZGRvbi1tYXJ2ZWwub25yZW5kZXIuY29tLw==
  MAX_ADDONS: MTU=
  MAX_GROUPS: MjA=
  MAX_KEYWORD_FILTERS: MzA=
  MAX_STREAM_EXPRESSION_FILTERS: MzA=
  MAX_TIMEOUT: NTAwMDA=
  MEDIAFUSION_CONFIG_TIMEOUT: NTAwMCAjIFRpbWVvdXQgKG1zKSBmb3IgL2VuY3J5cHQtdXNlci1kYXRhIGVuZHBvaW50Lg==
  MEDIAFUSION_URL: aHR0cHM6Ly9tZWRpYWZ1c2lvbi5lbGZob3N0ZWQuY29tLw==
  META_CACHE_TTL: MzAw
  MIN_TIMEOUT: MTAwMA==
  NUVIOSTREAMS_URL: aHR0cHM6Ly9udXZpb3N0cmVhbXMuaGF5ZC51ay8=
  OPENSUBTITLES_URL: aHR0cHM6Ly9vcGVuc3VidGl0bGVzLXYzLnN0cmVtLmlvLw==
  OPENSUBTITLES_V3_PLUS_URL: aHR0cHM6Ly9vcGVuc3VidGl0bGVzLnN0cmVtaW8uaG9tZXM=
  ORION_STREMIO_ADDON_URL: aHR0cHM6Ly81YTBkMTg4OGZhNjQtb3Jpb24uYmFieS1iZWFtdXAuY2x1Yi8=
  PEERFLIX_URL: aHR0cHM6Ly9wZWVyZmxpeC1hZGRvbi5vbnJlbmRlci5jb20v
  PORT: MzAwMA==
  PRECACHE_NEXT_EPISODE_MIN_INTERVAL: ODY0MDA=
  PROXY_IP_CACHE_TTL: OTAw
  PRUNE_INTERVAL: ODY0MDA=
  PRUNE_MAX_DAYS: LTE=
  REGEX_FILTER_ACCESS: dHJ1c3RlZA==
  RPDB_API_KEY_VALIDITY_CACHE_TTL: NjA0ODAw
  RPDB_CATALOGS_URL: aHR0cHM6Ly8xZmU4NGJjNzI4YWYtcnBkYi5iYWJ5LWJlYW11cC5jbHViLw==
  SECRET_KEY: "" # Asegúrate de establecer una clave secreta segura.
  STAR_WARS_UNIVERSE_URL: aHR0cHM6Ly9hZGRvbi1zdGFyLXdhcnMtdTllMy5vbnJlbmRlci5jb20v
  STATIC_RATE_LIMIT_MAX_REQUESTS: NzU=
  STATIC_RATE_LIMIT_WINDOW: NQ==
  STREAM_API_RATE_LIMIT_MAX_REQUESTS: MTA=
  STREAM_API_RATE_LIMIT_WINDOW: NQ==
  STREAM_CACHE_TTL: LTE=
  STREAMFUSION_URL: aHR0cHM6Ly9zdHJlYW0tZnVzaW9uLnN0cmVtaW9mci5jb20v
  STREAMING_CATALOGS_URL: aHR0cHM6Ly83YTgyMTYzYzMwNmUtc3RyZW1pby1uZXRmbGl4LWNhdGFsb2ctYWRkb24uYmFieS1iZWFtdXAuY2x1Yg==
  STREMIO_CATALOG_RATE_LIMIT_MAX_REQUESTS: MzA=
  STREMIO_CATALOG_RATE_LIMIT_WINDOW: NQ==
  STREMIO_MANIFEST_RATE_LIMIT_MAX_REQUESTS: NQ==
  STREMIO_MANIFEST_RATE_LIMIT_WINDOW: NQ==
  STREMIO_META_RATE_LIMIT_MAX_REQUESTS: MTU=
  STREMIO_META_RATE_LIMIT_WINDOW: NQ==
  STREMIO_STREAM_RATE_LIMIT_MAX_REQUESTS: MTA=
  STREMIO_STREAM_RATE_LIMIT_WINDOW: MTU=
  STREMIO_SUBTITLE_RATE_LIMIT_MAX_REQUESTS: MTA=
  STREMIO_SUBTITLE_RATE_LIMIT_WINDOW: NQ==
  STREMTHRU_STORE_URL: aHR0cHM6Ly9zdHJlbXRocnUuZWxmaG9zdGVkLmNvbS9zdHJlbWlvL3N0b3JlLw==
  STREMTHRU_TORZ_URL: aHR0cHM6Ly9zdHJlbXRocnUuZWxmaG9zdGVkLmNvbS9zdHJlbWlvL3Rvcnov
  SUBDL_URL: aHR0cHM6Ly9zdWJkbC5zdHJlbS50b3A=
  SUBSOURCE_URL: aHR0cHM6Ly9zdWJzb3VyY2Uuc3RyZW0udG9w
  SUBTITLE_CACHE_TTL: MzAw
  TMDB_ACCESS_TOKEN: ""
  TMDB_ADDON_URL: aHR0cHM6Ly90bWRiLmVsZmhvc3RlZC5jb20=
  TMDB_COLLECTIONS_URL: aHR0cHM6Ly82MWFiOWM4NWExNDktdG1kYi1jb2xsZWN0aW9ucy5iYWJ5LWJlYW11cC5jbHViLw==
  TORBOX_STREMIO_URL: aHR0cHM6Ly9zdHJlbWlvLnRvcmJveC5hcHAv
  TORRENT_CATALOGS_URL: aHR0cHM6Ly90b3JyZW50LWNhdGFsb2dzLnN0cmVtLmZ1bi8=
  TORRENTIO_URL: aHR0cHM6Ly90b3JyZW50aW8uc3RyZW0uZnVuLw==
  TORRENTS_DB_URL: aHR0cHM6Ly90b3JyZW50c2RiLmNvbQ==
  USA_TV_URL: aHR0cHM6Ly84NDhiMzUxNjY1N2MtdXNhdHYuYmFieS1iZWFtdXAuY2x1Yg==
  USER_API_RATE_LIMIT_MAX_REQUESTS: NQ==
  USER_API_RATE_LIMIT_WINDOW: NQ==
  WEBSTREAMR_URL: aHR0cHM6Ly93ZWJzdHJlYW1yLmhheWQudWs=
kind: Secret
metadata:
  name: aiostreams-env
  namespace: stremio
type: Opaque

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: aiostreams
  namespace: stremio
  labels:
    app: aiostreams
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aiostreams
  template:
    metadata:
      labels:
        app: aiostreams
    spec:
      containers:
        - name: aiostreams
          image: ghcr.io/viren070/aiostreams:latest
          ports:
            - containerPort: 3000
          envFrom:
            - secretRef:
                name: aiostreams-env
          volumeMounts:
            - name: data-storage
              mountPath: /app/data
      volumes:
        - name: data-storage
          persistentVolumeClaim:
            claimName: aiostreams-data-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: aiostreams
  namespace: stremio
spec:
  selector:
    app: aiostreams
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/server-snippet: "grpc_read_timeout 120s; grpc_send_timeout
      120s; client_body_timeout 120s;"
  labels:
    name: stremio
  name: aiostreams-ingress
  namespace: stremio
  resourceVersion: "1053653"
  uid: 39aec9fa-f12c-438d-b1c6-ab5ad4e1bfb0
spec:
  ingressClassName: public
  rules:
  - host: aiostreams.inner-circle.ovh
    http:
      paths:
      - backend:
          service:
            name: aiostreams
            port:
              number: 3000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - aiostreams.inner-circle.ovh
    secretName: aiostreams-tls

---

apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  generation: 1
  labels:
    name: stremio
  name: aiostreams-tls
  namespace: stremio
  ownerReferences:
  - apiVersion: networking.k8s.io/v1
    blockOwnerDeletion: true
    controller: true
    kind: Ingress
    name: aiostreams-ingress
    uid: 39aec9fa-f12c-438d-b1c6-ab5ad4e1bfb0
  uid: b0efbe5b-c2a9-4fbc-b0fa-727d679fe048
spec:
  dnsNames:
  - aiostreams.inner-circle.ovh
  issuerRef:
    group: cert-manager.io
    kind: ClusterIssuer
    name: letsencrypt
  secretName: aiostreams-tls
  usages:
  - digital signature
  - key encipherment
