kube-manifests/stremio/mfproxy.yaml
# ---------------------------
# Gluetun Deployment
# ---------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gluetun
  namespace: stremio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gluetun
  template:
    metadata:
      labels:
        app: gluetun
    spec:
      containers:
        - name: gluetun
          image: qmcgaw/gluetun
          securityContext:
            privileged: true
          env:
            - name: VPN_SERVICE_PROVIDER
              value: "protonvpn"
            - name: SERVER_COUNTRIES
              value: Netherlands
            - name: FREE_ONLY
              value: "true"
            - name: UPDATER_PERIOD
              value: "24h"
            - name: VPN_TYPE
              value: "wireguard"
            - name: WIREGUARD_PRIVATE_KEY
              value: ""
          ports:
            - containerPort: 8080
          livenessProbe:
            exec:
              command: ["/gluetun-entrypoint", "healthcheck"]
            initialDelaySeconds: 60
            periodSeconds: 60
            timeoutSeconds: 5
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: gluetun
  namespace: stremio
spec:
  selector:
    app: gluetun
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
---
# ---------------------------
# Mediaflow-proxy Deployment
# ---------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mediaflow-proxy
  namespace: stremio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mediaflow-proxy
  template:
    metadata:
      labels:
        app: mediaflow-proxy
    spec:
      containers:
        - name: mediaflow-proxy
          image: mhdzumair/mediaflow-proxy
          ports:
            - containerPort: 8888
          env:
            - name: API_PASSWORD
              value: ""
            - name: PROXY_URL
              value: "http://gluetun:8080"
            - name: TRANSPORT_ROUTES
              value: '{ "https://torrentio.strem.fun": { "proxy": true } }'
---
apiVersion: v1
kind: Service
metadata:
  name: mediaflow-proxy
  namespace: stremio
spec:
  selector:
    app: mediaflow-proxy
  ports:
    - port: 8888
      targetPort: 8888
      protocol: TCP
